# gdd-ml-in-prd

./: .flake8  .gitignore  mypy.ini  pyproject.toml
.github/workflows/: main.yml
app/: app.py
notebooks/: 01-packaging.ipynb  02-code-quality.ipynb  03-supercharge-package.ipynb  04-from-notebook-to-cli.ipynb  04-predict-outcome-types-Copy1.ipynb  05-from-notebook-to-restful-api.ipynb
src/animal_shelter/: cli.py  data.py
tests/animal_shelter/: test_data.py  test_features.py
